CAMFR 1.0:

 - faster binaries, especially under Windows, which can be up to three
   times faster than CAMFR 0.9
 - new way of defining complicated structures using geometric shapes and
   automatic discretisation
 - more excitations for cartesian structures: gaussians, plane waves 
   and arbitrary shaped functions (Lieven Vanholme)
 - support for stacks terminated by an infinite repetition of a basic 
   period
 - more robust method of calculating Bloch modes (Lieven Vanholme)
   and their field profiles
 - added stack.n(), stack.mu() and stack.eps()
 - Matlab link under Windows is by default enabled and installed
 - better handling of loosely coupled or degenerate waveguides
 - better handling of metals, also metals with purely imaginary refractive
   index
 - more flexible way of plotting field profiles of modes
 - CAMFR now runs reliably under graphical IDE environments like Idle
   or ActiveState's PythonWin
 - various documentation updates and minor bugfixes
 - more graceful handling of user errors

Important to note if you are upgrading from a pre 1.0 version of CAMFR are
the following changes:

 - set_left_wall and set_right_wall are replaced by set_lower_wall and 
   set_upper_wall respectively
 - imaginary thicknesses and coordinates are deprecated: PML is set by
   set_lower_PML, set_upper_PML and set_circ_PML



CAMFR 0.9:

 - initial public release